--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </ul>
         </nav>
     </header>
+    <form name="contact2" method="POST" data-netlify="true"></form>
 
     <h1>Moja stranica</h1>
     <h2>Ovo je h2</h2>
