--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,8 @@
             </nav>
         </header>
     
-    <form>
+    <form name="contact" method="POST" data-netlify="true">
         <input type="text" name="name" placeholder="full name" required>
-        <input name="contact" method="POST" data-netlify="true">
         <input type="email" name="email" placeholder="email" required>
         <input type="tel" name="phone" placeholder="0917693461" required pattern="[\(]\d{3}[\)]\d{3}[\-]\d{4}" required>
         <textarea name="message" placeholder="your message"></textarea>
