--- a/contact2.html
+++ b/contact2.html
@@ -24,7 +24,7 @@
     </nav>
 
     <div class="row">
-            <form name="contact2" method="POST" data-netlify="true" class="col s12">
+            <form name="contact2" method="POST" data-netlify="true" class="col s12"></form>
             <input type="hidden" name="form-name">
             <div class="row">
                 <div class="input-field col s12">
